--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "browser": "dist/index.umd.js",
     "types": "dist/index.d.ts",
     "files": [
+        "/dist",
         "LICENSE",
         "README.md"
     ],
@@ -36,16 +37,18 @@
         "@rollup/plugin-commonjs": "^15.1.0",
         "@rollup/plugin-json": "^4.1.0",
         "@rollup/plugin-node-resolve": "^9.0.0",
+        "@types/benchmark": "^2.1.0",
         "@types/jest": "^26.0.20",
         "@typescript-eslint/eslint-plugin": "^4.14.1",
         "@typescript-eslint/parser": "^4.14.1",
+        "benchmark": "^2.1.4",
         "eslint": "^7.18.0",
         "jest": "^26.6.3",
-        "node-fetch": "^2.6.1",
         "rollup": "^2.38.0",
         "rollup-plugin-terser": "^7.0.2",
         "rollup-plugin-typescript2": "^0.27.3",
         "ts-jest": "^26.4.4",
+        "ts-node": "^9.1.1",
         "tslib": "^2.1.0",
         "typedoc": "^0.20.19",
         "typescript": "^4.1.3"
