improved coverage + added auto-generated docs + improved README

--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
         "test": "jest",
         "build": "rollup -c",
         "prepare": "npm run build",
-        "build-docs": "typedoc src/index.ts --readme none"
+        "build-docs": "typedoc src/index.ts --readme none --out docs/generated"
     },
     "devDependencies": {
         "@rollup/plugin-commonjs": "^15.1.0",
