added lint to CI, more docs + fixed a test

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -58,3 +58,5 @@ jobs:
         run: npm run build
       - name: Run tests
         run: npm run test
+      - name: Run lint
+        run: npm run lint
