mention library being imported in the tutorial

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,24 +1,6 @@
 name: CI
 
-on:
-  push:
-    paths:
-      - .github
-      - src
-      - jest.config.js
-      - rollup.config.js
-      - package.json
-      - package-lock.json
-      - tsconfig.json
-  pull_request:
-    paths:
-      - .github
-      - src
-      - jest.config.js
-      - rollup.config.js
-      - package.json
-      - package-lock.json
-      - tsconfig.json
+on: [push, pull_request]
 
 jobs:
   # runs typescript build + test
